--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: > # this means to ignore newlines until "baseurl:"
     Welcome to ffledgling's blog.
     This site is currently under reconstruction.
 baseurl: "" # the subpath of your site, e.g. /blog
-#url: "http://blog.ffledgling.com" # the base hostname & protocol for your site
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://blog.ffledgling.com" # the base hostname & protocol for your site
+#url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: ffledgling
 github_username: ffledgling
 
