--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,13 @@
 # Site settings
 title: ffledgling's blog
 email: ffledgling [at] gmail [dot] com
-description: > # this means to ignore newlines until "baseurl:"
-    Welcome to ffledgling's blog.
-    This site is currently under reconstruction.
+description: Welcome to ffledgling's blog.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.ffledgling.com" # the base hostname & protocol for your site
 #url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: ffledgling
 github_username: ffledgling
+permalink: /:title
 
 # Build settings
 markdown: kramdown
