--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "https://blog.ffledgling.com" # the base hostname & protocol for your site
 #url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: ffledgling
 github_username: ffledgling
-permalink: /:title
+permalink: /:title.html
 
 # Build settings
 markdown: kramdown
