--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: ffledgling's blog
 email: ffledgling [at] gmail [dot] com
 description: Welcome to ffledgling's blog.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://blog.ffledgling.com" # the base hostname & protocol for your site
 #url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: ffledgling
